trying to fix menu cropped at the bottom for the address bar with webkit

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ html,
 body {
   height: 100%;
   background-color: #ffbd5e;
+  min-height: -webkit-fill-available;
 }
 
 img,
